--- a/LearningCSS/Bootstrap/NavBars/navBars.html
+++ b/LearningCSS/Bootstrap/NavBars/navBars.html
@@ -8,9 +8,15 @@
 <nav class="navbar navbar-default bg-light">
     <div class="container">
         <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
             <a href="#" class="navbar-brand">Generic Startup</a>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="bs-nav-demo">
         <ul class="nav navbar-nav">
             <li><a href="#">About US</a></li>
             <li><a href="#">Contact</a></li>
