--- a/LearningCSS/Bootstrap/Grid/grid.html
+++ b/LearningCSS/Bootstrap/Grid/grid.html
@@ -8,20 +8,35 @@
             background: pink;
             border: 1px solid purple;
         }
+        .orange {
+            background: orange;
+            border: 1px dashed purple;
+            height: 50px;
+        }
         </style>
 </head>
 <body>
 
     <div class="container">
         <div class="row">
-            <div class="col-lg-2 pink">COL LG 2</div>
-            <div class="col-lg-8 pink">COL LG 8</div>
-            <div class="col-lg-2 pink">COL LG 2</div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4 pink">COL LG 4</div>
-            <div class="col-lg-4 pink">COL LG 4</div>
-            <div class="col-lg-4 pink">COL LG 4</div>
+            <div class="col-md-3 col-sm-6 pink">
+                <div class="row">
+                <div class="col-lg-6 orange">Halfway!</div>    
+                <div class="col-lg-6 orange">Otherhalf</div>    
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 pink">Tour Date!</div>
+            <div class="col-md-3 col-sm-6 pink">Tour Date!</div>
+            <div class="col-md-3 col-sm-6 pink">
+                <div class="row">
+                    <div class="col-lg-2 orange"></div>
+                    <div class="col-lg-2 orange"></div>
+                    <div class="col-lg-2 orange"></div>
+                    <div class="col-lg-2 orange"></div>
+                    <div class="col-lg-2 orange"></div>
+                    <div class="col-lg-2 orange"></div>
+                </div>
+            </div>
         </div>
     </div>
 
