Image Gallery Pt2
Image Gallery Pt2

--- a/LearningCSS/Bootstrap/Image Gallery/imageGallery.html
+++ b/LearningCSS/Bootstrap/Image Gallery/imageGallery.html
@@ -4,6 +4,7 @@
         <title>Bootstrap Image Gallery</title>
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/gallery.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -31,7 +32,7 @@
 </nav>
 <div class="container">
     <div class="jumbotron">
-        <h1><span class="glyphicon glyphicon glyphicon-camera" aria-hidden="true"></span> The Image Gallery</h1>
+        <h1><i class="fa fa-camera-retro" aria-hidden="true"></i> The Image Gallery</h1>
         <p>This is a test image gallery</p>
     </div>
     <div class="row">
