--- a/LearningCSS/Bootstrap/Bootstrap4_Code/Bootstrap4_Code/13_Museum_Of_Candy/Starter/index.html
+++ b/LearningCSS/Bootstrap/Bootstrap4_Code/Bootstrap4_Code/13_Museum_Of_Candy/Starter/index.html
@@ -18,11 +18,106 @@
   </head>
   
   <body>
+    <nav id="mainNavBar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
+      <a href="#" class="navbar-brand">CANDY</a>
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle Navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div id="navLinks" class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="navitem">
+            <a href="" class="nav-link">HOME</a>
+          </li>
+          <li class="navitem">
+            <a href="" class="nav-link">ABOUT</a>
+          </li>
+          <li class="navitem">
+            <a href="" class="nav-link">TICKETS</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center content">
+        <div class="col-lg-6">
+          <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
+            <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img class="img-fluid" src="imgs/hand2.png" alt="">
+        </div>
+      </div>
+    </section>
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img src="imgs/milk.png" alt="" class="img-fluid">
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>MUSEUM OF CANDY</h2>
+              <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+              <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut, velit eaque vel excepturi 
+                amet mollitia ea molestias praesentium iure impedit nesciunt voluptatum, dolore iusto corrupti fugit nobis dolorum ipsa consequuntur!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row align-items-center content">
+        <div class="col-md-6 text-center ">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>MUSEUM OF CANDY</h2>
+              <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+              <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut, velit eaque vel excepturi 
+                amet mollitia ea molestias praesentium iure impedit nesciunt voluptatum, dolore iusto corrupti fugit nobis dolorum ipsa consequuntur!</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img src="imgs/gumball.png" alt="" class="img-fluid">
+        </div>
+        <div class="row align-items-center content">
+          <div class="col-md-6 order-2 order-md-1">
+            <img src="imgs/sprinkles.png" alt="" class="img-fluid">
+          </div>
+          <div class="col-md-6 text-center order-1 order-md-2">
+            <div class="row justify-content-center">
+              <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                <h2>MUSEUM OF CANDY</h2>
+                <img src="imgs/lolli_icon.png" class="d-none d-lg-inline">
+                <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut, velit eaque vel excepturi 
+                  amet mollitia ea molestias praesentium iure impedit nesciunt voluptatum, dolore iusto corrupti fugit nobis dolorum ipsa consequuntur!</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> 
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     
+    <script>
+      $(function () {
+        $(document).scroll(function(){
+          var $nav = $("#mainNavBar");
+          $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+        });
+      });
+    </script>
   </body>
 </html>
